wakapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wakapi
  namespace: wakapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wakapi
  template:
    metadata:
      labels:
        app: wakapi
    spec:
      containers:
        - image: ghcr.io/muety/wakapi:latest
          name: wakapi
          resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: wakapi-svc
  namespace: wakapi
spec:
  selector:
    app: wakapi
  ports:
    - port: 3000
      targetPort: 3000
