wakapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wakapi
  namespace: wakapi
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - time.fos.gg
      secretName: wakapi-tls
  rules:
    - host: time.fos.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wakapi-svc
                port:
                  number: 3000
